--- a/index.html
+++ b/index.html
@@ -162,6 +162,28 @@ a, a:visited { color : #0050e7; }
         <br>
 
 	  <div class="publication">
+            <img src="./UDC_logo.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
+                </strong>
+		<em><b>CVPR, 2021</b></em>
+                <br> R. Feng, C. Li, H. Chen, S. Li, C. C. Loy, J. Gu
+               Ruicheng Feng, <b>Chongyi Li</b>, Huaijin Chen, Shuai Li, Chen Change Loy, Jinwei Gu.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+                    <a href="">Project Page</a>| 
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	  <div class="publication">
             <img src="./Zero-DCE_files/zerodce++.png" class="publogo" width="300 px">
             <p> 
                 <strong>
