--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ a, a:visited { color : #0050e7; }
 <p>
 <br><strong>2020/01-now</strong>, I join in the MMLab@NTU as a research fellow and work with Dr.<a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html"><font color="#1C86EE"> Chen Change Loy</font></a>,  School of Computer Science and Engineering, Nanyang Technological University (NTU), Singapore.</br>
 
-<br><strong>2018/10-2020/01</strong>, I was a postdoctoral fellow and worked with Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
+<br><strong>2018/10-2020/01</strong>, I was a postdoctoral fellow and worked with Chair Prof. <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html"><font color="#1C86EE">Sam Kwong</font></a> (IEEE Fellow), Department of Computer Science, City University of Hong Kong (CityU), Kowloon, Hong Kong.</br>
 
 <br><strong>2016/12-2017/12</strong>, I was a joint Ph.D. student at Research School of Engineering, Australian National University (ANU), Canberra, Australia, under the supervision of Prof. <a href="http://www.porikli.com/"><font color="#1C86EE">Fatih Porikli</font></a> (IEEE Fellow).</br>
 
