--- a/index.html
+++ b/index.html
@@ -455,6 +455,10 @@ a, a:visited { color : #0050e7; }
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Teaching:</h2>
 <ul>
+
+<li>FYP 2020-2021: Student: Sihao Chen, Project: Learning to See in the Dark</li>
+<li>Master Project 2021: Student: Zurang Liu, Project: Deep Image Harmonization</li>
+<li>Master Project 2020: Student: Qiming Ai, Project: Deep Photo Enhancement</li>
 <li>NTU AI6126: Advanced Computer Vision, Teaching Assistant, 2020.</li>
 </ul>
 <br>
