--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ a, a:visited { color : #0050e7; }
 <li>FYP 2020-2021: Student: Sihao Chen, Project: Learning to See in the Dark</li>
 <li>Master Project 2021: Student: Zurang Liu, Project: Deep Image Harmonization</li>
 <li>Master Project 2020: Student: Qiming Ai, Project: Deep Photo Enhancement</li>
-<li>NTU AI6126: Advanced Computer Vision, Teaching Assistant, 2020.</li>
+<li>NTU AI6126: Advanced Computer Vision, Teaching Assistant, 2020</li>
 </ul>
 <br>
 <hr /> 
