--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <li>Two papers are recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  IEEE Transactions on Image Processing.</li>
 <li>One paper is recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=6221036" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  IEEE Transactions on Cybernetics.</li>
 <li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>
-<li>Five papers have been recognized as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
+<li>Seven papers have been recognized as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
 <li>ICCV (Outstanding Reviewer in 2021). <a href="http://iccv2021.thecvf.com/outstanding-reviewers"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
 <li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>
