--- a/index.html
+++ b/index.html
@@ -218,6 +218,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
         <br>
 
 	  <div class="publication">
+           <img src="./logo/MIPI.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Mobile Intelligent Photography & Imaging (MIPI)</a>
+                </strong>
+		  <br> 
+		<em><b>ECCV Workshop, 2022</b></em>
+                <br> 
+              Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
+                <br>
+                <span class="links">
+		      <a href="http://mipi-challenge.org/">Website</a>
+		      <a href="">We organize the 1st MIPI workshop coupled with challenges @ECCV 2022. </a>| 	
+		      
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	<div class="publication">
             <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
@@ -239,6 +262,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
+	
+	
+
 	
 	  <div class="publication">
             <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
