--- a/index.html
+++ b/index.html
@@ -703,20 +703,6 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <br>
 <hr /> 
 
- <h2>
-<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Co-Supervision and Teaching:</h2>
-<ul>
-<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Image and Video Enhancement, NTU, 01/2022-present</li>	
-<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
-<li>Co-Supervisor, M.E.: Zurang Liu (Beijing University of Posts and Telecommunications), AI Major Project: Deep Image Harmonization, NTU, 01/2021-present</li>
-<li>Co-Supervisor, M.E.: Qiming Ai (University of Science and Technology of China),  AI Major Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
-<li>Co-Supervisor, FYP: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, NTU, 06/2020-06/2021. Sihao's project is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a><a href="https://www.ntu.edu.sg/scse/news-events/news/detail/scse-s-chen-sihao-(computer-science-year-4)-makes-a-historical-first-win-at-the-global-undergraduate-awards-2021" target="_blank"><font color="#ff0000">[NTU News]</font></a></li>
-<li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
-<li>Co-Supervisor, M.E.: Yuheng Shi (Nanjing University of Posts and Telecommunications),  Project: Hand Guesture Recognition in Adverse Environment, ANU</li>
-<li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
-</ul>
-<br>
-<hr /> 
 
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service:</h2>
@@ -756,7 +742,32 @@ AAAI 2022
 </ul>
 <br>
 <hr />    
-  
+
+
+
+ <h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supervision and Teaching:</h2>
+<ul>
+<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Image and Video Enhancement, NTU, 01/2022-present</li>	
+<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
+<li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
+
+<li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
+</ul>
+<br>
+<hr /> 
+
+
+ <h2>
+<a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Alumni:</h2>
+<ul>
+<li>Co-Supervised with Cavan, Zurang Liu (Beijing University of Posts and Telecommunications), Project: Deep Image Harmonization, AI Master@NTU, 01/2021-04/2022, Now: Engineer@ByteDance, SG</li>
+<li>Co-Supervisor with Cavan, Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, FYP of Computer Science@NTU, 06/2020-06/2021, Now: Engineer@Shopee, SG. Sihao's project is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a><a href="https://www.ntu.edu.sg/scse/news-events/news/detail/scse-s-chen-sihao-(computer-science-year-4)-makes-a-historical-first-win-at-the-global-undergraduate-awards-2021" target="_blank"><font color="#ff0000">[NTU News]</font></a></li>
+<li>Co-Superviso with Cavan, Qiming Ai (University of Science and Technology of China),  Project: Deep Photo Enhancement,  AI Master@NTU, 01/2020-12/2020, Now:</li>
+<li>Co-Supervisor with Saeed, Yuheng Shi (Nanjing University of Posts and Telecommunications),  Project: Hand Guesture Recognition in Adverse Environment, Master@ANU, 11/2020-11/2021, Now:</li>
+</ul>
+<br>
+<hr /> 
   
 <h2>
 <a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Miscellaneous:</h2>
